--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -18,7 +18,7 @@
 				</div>
 				<ul class="nav-main">
 					<li>
-						<a href="../html/Menu.html"> <i class="fa-solid fa-house"></i>Inicio </a>
+						<a href="../index.html"> <i class="fa-solid fa-house"></i>Inicio </a>
 					</li>
 					<li>
 						<a id="Descarga" download><i class="fas fa-download"></i> Descargar Cancion</a>
