--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 												
 											/>
 										</div>
-										<h2>Schubert Stabat Mater in F Minor</h2>
+										<h2>Stabat Mater in F Minor</h2>
+										<h3>Schubert</h3>
 									</div>
 								</div>
 							
@@ -56,6 +57,7 @@
 										/>
 										</div>
 									<h2>Etude in C mayor, Op 10 No:1</h2>
+									<h3>Chopin</h3>
 								</div>
 							</div> 
 						</a>
@@ -70,6 +72,7 @@
 										/>
 										</div>
 									<h2>Guitar Concertino in A Minor</h2>
+									<h3>Salvador Bacarisse</h3>
 								</div>
 							</div> 
 						</a>
@@ -83,6 +86,7 @@
 										/>
 										</div>
 									<h2>Columbia</h2>
+									<h3>Quevedo</h3>
 								</div>
 							</div> 
 						</a>
@@ -97,6 +101,7 @@
 										/>
 										</div>
 									<h2>La primavera</h2>
+									<h3>Estopa</h3>
 								</div>
 							</div> 
 						</a>
@@ -110,6 +115,7 @@
 										/>
 										</div>
 									<h2>Shakira: Bzrp Music Sessions</h2>
+									<h3>Bizarrap</h3>
 								</div>
 							</div> 
 						</a>
@@ -123,6 +129,7 @@
 										/>
 										</div>
 									<h2>Supernova</h2>
+									<h3>Saiko</h3>
 								</div>
 							</div> 
 						</a>
@@ -136,6 +143,7 @@
 										/>
 										</div>
 									<h2>Starboy</h2>
+									<h3>The Weekend</h3>
 								</div>
 							</div> 
 						</a>
@@ -149,6 +157,7 @@
 										/>
 										</div>
 									<h2>Strangers</h2>
+									<h3>Kenya Grace</h3>
 								</div>
 							</div> 
 						</a>
@@ -162,6 +171,7 @@
 										/>
 										</div>
 									<h2>God Plans</h2>
+									<h3>Drake</h3>
 								</div>
 							</div> 
 						</a>
@@ -175,6 +185,7 @@
 										/>
 										</div>
 									<h2>Todo de ti</h2>
+									<h3>Rauw Alejandro</h3>
 								</div>
 							</div> 
 						</a>
@@ -188,6 +199,7 @@
 										/>
 										</div>
 									<h2>Piece of Your Heart</h2>
+									<h3>Meduza</h3>
 								</div>
 							</div> 
 						</a>
