--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 												
 											/>
 										</div>
-										<h2>Stabat Mater in F Minor</h2>
-										<h3>Schubert</h3>
+										<h2>Schubert Stabat Mater in F Minor</h2>
 									</div>
 								</div>
 							
@@ -57,7 +56,6 @@
 										/>
 										</div>
 									<h2>Etude in C mayor, Op 10 No:1</h2>
-									<h3>Chopin</h3>
 								</div>
 							</div> 
 						</a>
@@ -72,7 +70,6 @@
 										/>
 										</div>
 									<h2>Guitar Concertino in A Minor</h2>
-									<h3>Salvador Bacarisse</h3>
 								</div>
 							</div> 
 						</a>
@@ -86,7 +83,6 @@
 										/>
 										</div>
 									<h2>Columbia</h2>
-									<h3>Quevedo</h3>
 								</div>
 							</div> 
 						</a>
@@ -101,7 +97,6 @@
 										/>
 										</div>
 									<h2>La primavera</h2>
-									<h3>Estopa</h3>
 								</div>
 							</div> 
 						</a>
@@ -115,7 +110,6 @@
 										/>
 										</div>
 									<h2>Shakira: Bzrp Music Sessions</h2>
-									<h3>Bizarrap</h3>
 								</div>
 							</div> 
 						</a>
@@ -129,7 +123,6 @@
 										/>
 										</div>
 									<h2>Supernova</h2>
-									<h3>Saiko</h3>
 								</div>
 							</div> 
 						</a>
@@ -143,7 +136,6 @@
 										/>
 										</div>
 									<h2>Starboy</h2>
-									<h3>The Weekend</h3>
 								</div>
 							</div> 
 						</a>
@@ -157,7 +149,6 @@
 										/>
 										</div>
 									<h2>Strangers</h2>
-									<h3>Kenya Grace</h3>
 								</div>
 							</div> 
 						</a>
@@ -171,7 +162,6 @@
 										/>
 										</div>
 									<h2>God Plans</h2>
-									<h3>Drake</h3>
 								</div>
 							</div> 
 						</a>
@@ -185,7 +175,6 @@
 										/>
 										</div>
 									<h2>Todo de ti</h2>
-									<h3>Rauw Alejandro</h3>
 								</div>
 							</div> 
 						</a>
@@ -199,7 +188,6 @@
 										/>
 										</div>
 									<h2>Piece of Your Heart</h2>
-									<h3>Meduza</h3>
 								</div>
 							</div> 
 						</a>
