--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 												
 											/>
 										</div>
-										<h2>Stabat Mater in F Minor</h2>
-										<h3>Schubert</h3>
+										<h2>Schubert Stabat Mater in F Minor</h2>
 									</div>
 								</div>
 							
@@ -57,7 +56,6 @@
 										/>
 										</div>
 									<h2>Etude in C mayor, Op 10 No:1</h2>
-									<h3>Chopin</h3>
 								</div>
 							</div> 
 						</a>
@@ -72,11 +70,10 @@
 										/>
 										</div>
 									<h2>Guitar Concertino in A Minor</h2>
-									<h3>Salvador Bacarisse</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Columbia.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -86,12 +83,11 @@
 										/>
 										</div>
 									<h2>Columbia</h2>
-									<h3>Quevedo</h3>
 								</div>
 							</div> 
 						</a>
 	
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Primavera.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -101,11 +97,10 @@
 										/>
 										</div>
 									<h2>La primavera</h2>
-									<h3>Estopa</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Shakira.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -115,11 +110,10 @@
 										/>
 										</div>
 									<h2>Shakira: Bzrp Music Sessions</h2>
-									<h3>Bizarrap</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Supernova.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -129,11 +123,10 @@
 										/>
 										</div>
 									<h2>Supernova</h2>
-									<h3>Saiko</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Starboy.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -143,11 +136,10 @@
 										/>
 										</div>
 									<h2>Starboy</h2>
-									<h3>The Weekend</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Strangers.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -157,11 +149,10 @@
 										/>
 										</div>
 									<h2>Strangers</h2>
-									<h3>Kenya Grace</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/GodPlans.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -171,11 +162,10 @@
 										/>
 										</div>
 									<h2>God Plans</h2>
-									<h3>Drake</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/TodoDeTi.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -185,11 +175,10 @@
 										/>
 										</div>
 									<h2>Todo de ti</h2>
-									<h3>Rauw Alejandro</h3>
 								</div>
 							</div> 
 						</a>
-						<a>
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Meduza.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -199,7 +188,6 @@
 										/>
 										</div>
 									<h2>Piece of Your Heart</h2>
-									<h3>Meduza</h3>
 								</div>
 							</div> 
 						</a>
