--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Columbia.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Columbia.gif&cancion=../Canciones/Columbia.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -87,7 +87,7 @@
 							</div> 
 						</a>
 	
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Primavera.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Primavera.gif&cancion=../Canciones/Primavera.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -100,7 +100,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Shakira.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Shakira.gif&cancion=../Canciones/Shakira.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -113,7 +113,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Supernova.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Supernova.gif&cancion=../Canciones/Supernova.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -126,7 +126,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Starboy.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Starboy.gif&cancion=../Canciones/Starboy.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -139,7 +139,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Strangers.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Strangers.gif&cancion=../Canciones/Strangers.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -152,7 +152,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/GodPlans.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/GodPlans.gif&cancion=../Canciones/GodPlans.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -165,7 +165,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/TodoDeTi.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/TodoDeTi.gif&cancion=../Canciones/TodoDeTi.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
@@ -178,7 +178,7 @@
 								</div>
 							</div> 
 						</a>
-						<a href="html/Reproduccion.html?gif=../img/GIFS/Chopin.gif&cancion=../Canciones/Meduza.mp3">
+						<a href="html/Reproduccion.html?gif=../img/GIFS/Meduza.gif&cancion=../Canciones/Meduza.mp3">
 							<div class="card-canciones">
 								<div class="card">
 									<div class="card-img">
