--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -9,6 +9,7 @@
 		/>
 		<title>Esify</title>
 		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="icon" href="img/icono.ico" type="image/x-icon">
 	</head>
     <body>
         <main class="main container">
@@ -33,8 +34,12 @@
                     <input class="barra-reproduccion" type="range" id="seekBar" value="0">
 					
 					<input class="barra-volumen" type="range" id="volumeSlider" min="0" max="1" step="0.025" value="0.5">
+
+					<span id="duration">0:00</span>
+
+					<span id="currentTime">0:00</span>
 					
-                <audio id="audioPlayer" ></audio>
+                <audio id="audioPlayer" ontimeupdate="updateTime()" onended="resetPlayer()" onloadedmetadata="initializePlayer()"></audio>
             </section>
         </main>
 
