--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -22,7 +22,7 @@
 						<a href="../index.html"> <i class="fa-solid fa-house"></i>Inicio </a>
 					</li>
 					<li>
-						<a id="Descarga" download><i class="fas fa-download"></i> Descargar Cancion</a>
+						<a id="Descarga" download><i class="fas fa-download"></i> Descargar Canción</a>
 					</li>
 				</ul>
 				</div>
