--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -35,9 +35,9 @@
 					
 					<input class="barra-volumen" type="range" id="volumeSlider" min="0" max="1" step="0.025" value="0.5">
 
-					<span id="duration">0:00</span>
+					<span id="duration" class="song-duration">0:00</span>
 
-					<span id="currentTime">0:00</span>
+					<span id="currentTime" class="current-time">0:00</span>
 					
                 <audio id="audioPlayer" ontimeupdate="updateTime()" onended="resetPlayer()" onloadedmetadata="initializePlayer()"></audio>
             </section>
