--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		/>
 		<title>Esify</title>
 		<link rel="stylesheet" href=css/styles.css />
-		<link rel="icon" href="img/icono.ico" type="image/x-icon">
+		<link rel="icon" href="img/icono.ico" type="image/x-icon"/>
 	</head>
 	<body>
 		<main class="main container">
