--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -36,7 +36,8 @@
 					
 
 					<input class="barra-volumen" type="range" id="volumeSlider" min="0" max="1" step="0.025" value="0.5">
-					<span class="icono-volumen"><i class="fa-solid fa-volume-high"></i></span>
+					<span class="icono-volumen" id="iconoVolumen"><i class="fa-solid fa-volume-high"></i></span>
+
 					
 
 					<span id="duration" class="song-duration">0:00</span>
