--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 					<li>
 						<a href="#"> <i class="fa-solid fa-house"></i>Inicio </a>
 					</li>
+					<li>
+						<a href="clasica.html" id="clasica"><i class="fa-solid fa-guitar"></i> Clásica</a>
+					</li>
+					<li>
+						<a href="pop.html" id="pop"><i class="fa-solid fa-microphone-lines"></i> Pop</a>
+					</li>
+					<li>
+						<a href="reggeaton.html" id="regueton"><i class="fa-brands fa-tiktok"></i> Reggaeton</a>
+					</li>
 				</ul>
 				</div>
 			</nav>
