--- a/pop.html
+++ b/pop.html
@@ -38,7 +38,7 @@
 			<!-- Contenido Principal -->
 			<section class="main-content">
 				<div class="container-nombre-canciones">
-					<h1 class="titulo-cancion"> Canciones Pop</h1>
+					<h1 class="titulo-cancion"> Pop</h1>
 					<div class="container-card-canciones">
 	
 						<a href="html/Reproduccion.html?gif=../img/GIFS/Primavera.gif&cancion=../Canciones/Primavera.mp3&posicion=4">
