--- a/reggeaton.html
+++ b/reggeaton.html
@@ -38,7 +38,7 @@
 			<!-- Contenido Principal -->
 			<section class="main-content">
 				<div class="container-nombre-canciones">
-					<h1 class="titulo-cancion"> Canciones de reggeaton </h1>
+					<h1 class="titulo-cancion"> Reggeaton </h1>
 					<div class="container-card-canciones">
 					
 						<a href="html/Reproduccion.html?gif=../img/GIFS/Columbia.gif&cancion=../Canciones/Columbia.mp3&posicion=3">
