--- a/clasica.html
+++ b/clasica.html
@@ -38,7 +38,7 @@
 			<!-- Contenido Principal -->
 			<section class="main-content">
 				<div class="container-nombre-canciones">
-					<h1 class="titulo-cancion"> Canciones clásicas</h1>
+					<h1 class="titulo-cancion"> Música clásica</h1>
 					<div class="container-card-canciones">
 					
 						<a href="html/Reproduccion.html?gif=../img/GIFS/Schubert.gif&cancion=../Canciones/Schubert.mp3&posicion=0">	
