--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -39,6 +39,7 @@
 					<span class="icono-volumen" id="iconoVolumen"><i class="fa-solid fa-volume-high"></i></span>
 
 					<button class="btn-next" id="NextButton" ><i class="fas fa-forward"></i></button>
+					<button class="btn-previous" id="PreviousButton"><i class="fas fa-backward"></i></button>
 					
 
 					<span id="duration" class="song-duration">0:00</span>
