--- a/html/Reproduccion.html
+++ b/html/Reproduccion.html
@@ -22,6 +22,9 @@
 						<a href="../index.html"> <i class="fa-solid fa-house"></i>Inicio </a>
 					</li>
 					<li>
+						<a href="../html/videos.html"><i class="fa-solid fa-video"></i>Videoclips</a>
+					</li>
+					<li>
 						<a id="Descarga" download><i class="fas fa-download"></i> Descargar canción</a>
 					</li>
 				</ul>
