--- a/index.html
+++ b/index.html
@@ -20,16 +20,10 @@
 				</div>
 				<ul class="nav-main">
 					<li>
-						<a href="#"> <i class="fa-solid fa-house"></i>Inicio </a>
+						<a href="index.html"> <i class="fa-solid fa-house"></i>Inicio </a>
 					</li>
 					<li>
-						<a href="clasica.html" id="clasica"><i class="fa-solid fa-guitar"></i> Clásica</a>
-					</li>
-					<li>
-						<a href="pop.html" id="pop"><i class="fa-solid fa-microphone-lines"></i> Pop</a>
-					</li>
-					<li>
-						<a href="reggeaton.html" id="regueton"><i class="fa-brands fa-tiktok"></i> Reggaeton</a>
+						<a href="/html/videos.html"><i class="fa-solid fa-video"></i>Videoclips</a>
 					</li>
 				</ul>
 				</div>
