--- a/html/visualizacion.html
+++ b/html/visualizacion.html
@@ -25,7 +25,7 @@
 						<a href="../html/videos.html"><i class="fa-solid fa-video"></i>Videoclips</a>
 					</li>
 					<li>
-						<a id="Descarga" download><i class="fas fa-download"></i> Descargar canción</a>
+						<a id="Descarga" download><i class="fas fa-download"></i> Descargar Videoclip</a>
 					</li>
 					
 				</ul>
